public/tproxy/ingress-app.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-proxy
  namespace: tproxy
spec:
  tls:
    passthrough: true
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`www.klick.ee`) || HostSNI(`klick.ee`)
      services:
        - name: app
          port: 7770
          proxyProtocol:
            version: 2
